Selfhosted Gill Sans Font

--- a/branch_teststyle.css
+++ b/branch_teststyle.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: '33535gillsansmt';
+	src: url('./33535gillsansmt.woff') format('woff');
+}
+
 .div-bank {
     width: 100%;
     height: 1px;
@@ -18,7 +23,7 @@ body {
     min-width: 100%;
     display: flex;
     background-color: #f8f5eb;
-    font-family: "Gill Sans MT", Helvetica, ui-sans-serif, Arial, sans-serif;
+    font-family: "Gill Sans MT", "33535gillsansmt", Helvetica, ui-sans-serif, Arial, sans-serif;
     cursor: url("./Images/tricursor.cur"), auto;
     overflow: hidden;
 }
