--- a/branch_teststyle.css
+++ b/branch_teststyle.css
@@ -63,9 +63,24 @@ body {
     visibility: visible;
     transition: transform .3s ease-out, 
     opacity 1s linear, visibility 1s linear;
+}
+.all-entries-container {
+    z-index: 100;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    visibility: visible;
+    transition: transform .3s ease-out, 
+    opacity 1s linear, visibility 1s linear;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 50px;
+    overflow-y: scroll;
+}
+.allentriestomain {
+    position: absolute;
+    left: 10vw;
+    top: 15vh;
 }
 
 .homeboxfake {
